# POD_STANDALONE

./: CMakeLists.txt  README.TXT
include/: dirreader.h  helper.h  podefines.h  podescriber.h  podetector.h  pogroundtruthextractor.h  potrainer.h
script/: evaluate_results.py
src/: detect_main.cpp  dirreader.cpp  helper.cpp  podescriber.cpp  podetector.cpp  pogroundtruthextractor.cpp  porefiner.cpp  potrainer.cpp  train_main.cpp
